--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx ts-node ."
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Hayahaha",
+  "license": "ISC",
+  "dependencies": {
+    "@types/node": "^20.11.17",
+    "ts-node": "^10.9.2"
+  }
 }
